# esp-idf-component-SDL_bsp

./: CMakeLists.txt  Kconfig
include/: esp_bsp_sdl.h
src/: esp_bsp_sdl_common.c
src/boards/: esp_bsp_sdl_axs15231b.c
src/driver/: esp_lcd_axs15231b.c
